Grid spacing fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 section {
@@ -86,7 +87,6 @@ footer p {
   font-weight: 200;
   font-size: 14px;
   opacity: 0.8;
-  margin-right: 20px;
   line-height: 1.5;
 }
 
